# tree-sitter-quarto2

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  TODO.md  binding.gyp  example-file.qmd  go.mod  grammar-old.js  grammar.js  grammar3.js  package.json  pyproject.toml  setup.py  simple.html  simple.qmd  simple2.html  simple2.qmd  tree-sitter.json
bindings/c/: tree-sitter-quarto.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_quarto/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterQuarto/: quarto.h
bindings/swift/TreeSitterQuartoTests/: TreeSitterQuartoTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: synatx_emphasis.txt  syntax_combo.txt  syntax_star.txt  syntax_strong.txt  syntax_underscore.txt
